--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@ initial-scale=1.0"
     <title>Agenda ADSO</title>
   </head>
   <body>
+  <h2 className="text-3xl text-red-600 font-bold">
+  Tailwind funciona 💜
+</h2>
+ <p className="bg-morado text-white text-xs rounded px-3 py-1 inline-block">
+   ADSO
+    </p>
+
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
